myteo/test/analyze/type_check/assignment/wildcard.exp
Error: Expected type `(unit, any)` but found `(int, (bool, string))`
test/analyze/type_check/assignment/wildcard.myte:12:11-26
 12 |   (x, _) = (1, (true, ""));
    |            ^^^^^^^^^^^^^^^

Error: Expected type `(any, unit)` but found `(int, (bool, string))`
test/analyze/type_check/assignment/wildcard.myte:13:11-26
 13 |   (_, y) = (1, (true, ""));
    |            ^^^^^^^^^^^^^^^